[RM] Support #29173. qfj tests can be started from build.gradle
Change-Id: I77a2d9338d542c795ed34126923510b867009aae